--- a/src/common/styles/index.scss
+++ b/src/common/styles/index.scss
@@ -1,1 +1,3 @@
-@import '../styles/tsRetailTheme.scss';
+@import '@/styles/tsRetailTheme.scss';
+@import '@/components/header/header.scss';
+@import '@/components/footer/footer.scss';
