initial typescript implementation

--- a/src/common/styles/index.scss
+++ b/src/common/styles/index.scss
@@ -1,6 +1,6 @@
-@import '@/styles/tsRetailTheme.scss';
-@import '@/components/header/header.scss';
-@import '@/components/footer/footer.scss';
+@import '/src/common/styles/tsRetailTheme.scss';
+@import '/src/common/components/header/header.scss';
+@import '/src/common/components/footer/footer.scss';
 @import '/src/pages/map/googleMap.scss'
 
 
